--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <ul class="uk-list uk-list-large uk-link-text uk-link-reset">
                     <li><a class="uk-modal-close" href="#about" uk-scroll>ABOUT</a></li>
                     <li><a class="uk-modal-close" href="#products" uk-scroll>PRODUCTS</a></li>
+                    <li><a class="uk-modal-close" href="#pictures" uk-scroll>PICTURES</a></li>
                     <li><a class="uk-modal-close" href="#contact" uk-scroll>CONTACT</a></li>
                 </ul>
             </div>
@@ -103,7 +104,50 @@
         </div>
     </div>
 
-    <div class="uk-section uk-margin-xlarge-bottom" id="contact">
+    <div uk-slider class="uk-maragin-xlarge" id="pictures">
+        <div class="uk-text-center uk-margin-medium">
+                <div class="uk-text-lead">PICTURES</div>
+        </div>
+        <div class="uk-position-relative uk-visible-toggle uk-light">
+            <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@m">
+                <li>
+                    <img src="images/picture1.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture2.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture3.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture4.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture5.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture6.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture7.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture8.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture9.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/picture10.jpg" alt="">
+                </li>
+            </ul>
+            <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+            <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+        </div>
+    </div>
+
+
+    <div class="uk-section uk-margin-xlarge" id="contact">
         <div class="uk-text-center uk-container">
             <div class="uk-text-lead" >CONTACT</div>
             <hr>
@@ -114,6 +158,12 @@
     <div class="uk-margin-xlarge">
         <div class="uk-text-center">
             <img data-src="images/pic4.jpg" uk-img>
+        </div>
+    </div>
+
+    <div class="uk-section uk-margin-xlarge" id="contact">
+        <div class="uk-text-center uk-container">
+            <div class="uk-text-meta">Tonlé Sap, Cambodia 2017</div>
         </div>
     </div>
 
