--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="uikit.min.css">
 </head>
 <body>
+    <span id="top"></span>
     <div uk-sticky>
         <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar style="position: relative; z-index: 980;">
             <div class="uk-navbar-right uk-margin-right">
@@ -25,11 +26,12 @@
 
     <div id="menu-modal" class="uk-modal-full uk-modal" uk-modal>
         <div class="uk-modal-dialog uk-flex uk-flex-center uk-flex-middle" uk-height-viewport>
-            <button class="uk-modal-close-full uk-margin-right uk-margin-top" type="button" uk-close></button>
+            <button class="uk-modal-close-full uk-close-large uk-margin-small-right uk-margin-small-top" type="button" uk-close></button>
             <div class="uk-text-center">
                 <ul class="uk-list uk-list-large uk-link-text uk-link-reset">
+                    <li><a class="uk-modal-close" href="#top" uk-scroll>HOME</a></li>
                     <li><a class="uk-modal-close" href="#about" uk-scroll>ABOUT</a></li>
-                    <li><a class="uk-modal-close" href="#products" uk-scroll>PRODUCTS</a></li>
+                    <li><a class="uk-modal-close" href="#history" uk-scroll>HISTORY</a></li>
                     <li><a class="uk-modal-close" href="#pictures" uk-scroll>PICTURES</a></li>
                     <li><a class="uk-modal-close" href="#contact" uk-scroll>CONTACT</a></li>
                 </ul>
@@ -37,79 +39,130 @@
         </div>
     </div>
 
-    <div class="uk-text-center uk-container">
+    <div class="uk-text-center uk-container" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <img data-src="images/pic1.jpg" uk-img>
     </div>
 
-    <div class="uk-section uk-container uk-margin-xlarge" id="about">
-        <div class="uk-text-center uk-margin-medium">
-            <div class="uk-text-lead">ABOUT</div>
-        </div>
-        <div class="uk-column-1-2@m uk-column-1-1@s">
-            <div>
-                <img data-src="images/account.jpg" uk-img>
+    <div class="uk-section uk-margin-large-right uk-margin-large-left">
+        <div class="uk-width-1-3@l uk-width-2-3@s uk-width-1-1 uk-margin-auto">
+            <div class="uk-margin-medium">
+                <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ただ、旅がしたい。</p>
+                <hr class="uk-divider-small uk-margin-medium-bottom">
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">みなさんは旅をする理由がありますか？</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">社会性のある立派なものを持っていますか？自己中心的なものですか？</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくは、ただひたすらに旅がしたかった、それだけです。</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅ってなんか魅力的じゃないですか。幸か不幸か刺激的な経験ができそうな気がしませんか。なんか、カッコよくないですか。</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅をする理由は常にあいまいです。それを旅と呼ぶのではないでしょうか。</p>
             </div>
-            <div class="uk-text-center uk-margin-medium">
-                <div class="uk-text-lead uk-margin-medium">ひろたつ</div>
-                <div class="uk-text-meta uk-margin-medium">
-                    <p>旅人「世界中の人と自然に触れる旅」</p>
-                    <p>ヒッチハイクとボランティアでゼロ円ワーホリ中</p>
+        </div>
+    </div>
+
+    <div class="uk-text-center uk-container uk-margin-large-bottom" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+        <img data-src="images/pic5.jpg" uk-img>
+    </div>
+
+    <div class="uk-section uk-container uk-width-2-3@s uk-margin-auto" id="concept">
+        <div class="uk-flex-middle" uk-grid>
+            <div class="uk-width-1-2@m uuk-width-2-3@s uk-width-1-1 uk-margin-auto">
+                <div class="uk-margin-medium">
+                    <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">さまよい歩き、その先へ</p>
+                    <hr class="uk-divider-small uk-margin-medium-bottom">
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">世界を旅すると、見たことのない景色見ることができます。全く異なる文化に触れることができます。最高の笑顔も最低の経験もすることになるでしょう。</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">その中で、何か発見があるはずです。</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">それらひとつひとつの発見を大切にしておくと、どこかで点と点が繋がって線になり、形になっていくのかなと思います。</p>
                 </div>
-                <ul class="uk-list">
+            </div>
+            <div class="uk-width-1-2@m uk-width-1-1" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+                <img data-src="images/pic7.jpg" uk-img>
+            </div>
+        </div>
+    </div>
+
+    <div class="uk-section uk-container uk-width-2-3@s uk-margin-auto" id="concept">
+        <div class="uk-flex-middle" uk-grid>
+            <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+                <img data-src="images/pic6.jpg" uk-img>
+            </div>
+            <div class="uk-width-1-2@m uk-width-2-3@s uk-width-1-1 uk-margin-auto uk-flex-first uk-flex-last@s">
+                <div class="uk-margin-medium">
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ふと、ぼくのあいまいな旅にも共通点が見えてきました。ヒッチハイクやボランティアをする中で、ふたつのキーワードが頭に浮かびました。</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">「人」と「自然」</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくの旅の中心には、常にこのふたつがありました。これがぼくの旅のコンセプトです。</p>
+                    <hr class="uk-divider-small uk-margin-medium-top">
+                    <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">世界中の人と自然に触れる旅</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="uk-section uk-margin-large" id="about">
+        <div class="uk-text-center uk-margin-medium" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+            <div class="uk-text-lead">ABOUT</div>
+            <hr class="uk-divider-small uk-margin-medium-bottom">
+        </div>
+        <div class="uk-flex-middle" uk-grid>
+            <div class="uk-width-1-2@s uk-text-right" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+                <div class="uk-margin-medium-bottom uk-margin-large-right">
+                    <div class="uk-text-large">ひろたつ</div>
+                </div>
+                <div class="uk-text-meta uk-margin-large-right">
+                    <div>旅人「世界中の人と自然に触れる旅」</div>
+                    <div>ヒッチハイクとボランティアでゼロ円ワーホリ中</div>
+                    <div>写真を撮ったりプログラムを書いたりしています</div>
+                </div>
+                <ul class="uk-list uk-margin-large-right">
                     <li><a class="uk-link-reset" href="https://twitter.com/hirotatsuuu" target="_blank">Twitter</a></li>
                     <li><a class="uk-link-reset" href="https://www.instagram.com/hirotatsuuuu" target="_blank">Instagram</a></li>
                 </ul>
             </div>
+            <div class="uk-width-1-2@s uk-width-1-1 uk-flex-first uk-flex-last@s" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+                <img data-src="images/account.jpg" uk-img>
+            </div>
         </div>
     </div>
 
-    <div class="uk-margin-xlarge">
-        <div class="uk-text-center uk-container">
-            <img data-src="images/pic2.jpg" uk-img>
+    <div class="uk-text-center uk-container uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+        <img data-src="images/pic2.jpg" uk-img>
+    </div>
+
+    <div class="uk-section uk-margin-large" id="history">
+        <div class="uk-flex-middle" uk-grid>
+            <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+                <img data-src="images/pic8.jpg" uk-img>
+            </div>
+            <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+                <div class="uk-margin-large-left">
+                    <div class="uk-text-lead">HISTORY</div>
+                    <hr class="uk-divider-small uk-margin-medium-bottom">
+                </div>
+                <div class="uk-margin-large-left">
+                    <ul class="uk-list">
+                        <li>1994年12月8日生まれ</li>
+                        <li>2016年7月 初ヒッチハイク(東京-名古屋)</li>
+                        <li>2016年8月 初海外(フィリピン)</li>
+                        <li>2017年4月 都内のIT企業に入社</li>
+                        <li>2018年8月 ヒッチハイク日本一周</li>
+                        <li>2018年9月 ゼロ円ワーホリ(NZ)</li>
+                        <li>2019年9月 ヒッチハイクAUS一周旅</li>
+                        <li>2019年12月 世界一周</li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div uk-slider class="uk-maragin-xlarge" id="products">
+    <div class="uk-text-center uk-container uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+        <img data-src="images/pic3.jpg" uk-img>
+    </div>
+
+    <div uk-slider class="uk-section" id="pictures" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <div class="uk-text-center uk-margin-medium">
-                <div class="uk-text-lead">PRODUCTS</div>
-        </div>
-        <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-light">
-            <li class="uk-transition-toggle" tabindex="0">
-                <a href="https://tatsuppi.work" target="_blank">
-                    <img src="images/product1.jpg" alt="">
-                </a>
-            </li>
-            <li class="uk-transition-toggle" tabindex="0">
-                <a href="https://hitchhike.work" target="_blank">
-                    <img src="images/product2.jpg" alt="">
-                </a>
-            </li>
-            <li class="uk-transition-toggle" tabindex="0">
-                <a href="https://esekansai.work/" target="_blank">
-                    <img src="images/product3.jpg" alt="">
-                </a>
-            </li>
-            <li class="uk-transition-toggle" tabindex="0">
-                <a href="https://htlp.work" target="_blank">
-                    <img src="images/product4.jpg" alt="">
-                </a>
-            </li>
-        </ul>
-        <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-    </div>
-
-    <div class="uk-margin-xlarge">
-        <div class="uk-text-center uk-container">
-            <img data-src="images/pic3.jpg" uk-img>
-        </div>
-    </div>
-
-    <div uk-slider class="uk-maragin-xlarge" id="pictures">
-        <div class="uk-text-center uk-margin-medium">
-                <div class="uk-text-lead">PICTURES</div>
+            <div class="uk-text-lead">PICTURES</div>
+            <hr class="uk-divider-small uk-margin-medium-bottom">
         </div>
         <div class="uk-position-relative uk-visible-toggle uk-light">
-            <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@m">
+            <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m">
                 <li>
                     <img src="images/picture1.jpg" alt="">
                 </li>
@@ -134,12 +187,6 @@
                 <li>
                     <img src="images/picture8.jpg" alt="">
                 </li>
-                <li>
-                    <img src="images/picture9.jpg" alt="">
-                </li>
-                <li>
-                    <img src="images/picture10.jpg" alt="">
-                </li>
             </ul>
             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
@@ -147,28 +194,28 @@
     </div>
 
 
-    <div class="uk-section uk-margin-xlarge" id="contact">
+    <div class="uk-section uk-margin-large" id="contact" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <div class="uk-text-center uk-container">
             <div class="uk-text-lead" >CONTACT</div>
             <hr>
-            <div class="uk-text-meta">hirotatsuuu@gmail.com</div>
+            <div class="uk-text-meta"><a href="mailto:hirotatsuuu@gmail.com">hirotatsuuu@gmail.com</a></div>
         </div>
     </div>
 
-    <div class="uk-margin-xlarge">
+    <div class="uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <div class="uk-text-center">
             <img data-src="images/pic4.jpg" uk-img>
         </div>
     </div>
 
-    <div class="uk-section uk-margin-xlarge" id="contact">
+    <div class="uk-section uk-margin-xlarge" id="contact" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <div class="uk-text-center uk-container">
-            <div class="uk-text-meta">Tonlé Sap, Cambodia 2017</div>
+            <div class="uk-text-meta">Tonlé Sap Lake, Cambodia 2017</div>
         </div>
     </div>
 
-    <div class="uk-section-xsmall uk-section-secondary uk-light">
-        <div class="uk-margin-top uk-margin-bottom uk-text-center">Copyright hirotatsu.</div>
+    <div class="uk-section-xsmall uk-section-secondary uk-light" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+        <div class="uk-margin-top uk-margin-bottom uk-text-center uk-text-meta">Copyright 2019 hirotatsu.</div>
     </div>
 
     <script src="uikit.min.js"></script>
