--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:site" content="@hirotatsuuu" />
     <meta property="og:url" content="https://***" />
     <meta property="og:title" content="hirotatsu." />
-    <meta property="og:description" content="hirotatsu no web page desu." />
+    <meta property="og:description" content="koreha hirotatsu no web page desu." />
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/hirotatsu-lp.appspot.com/o/%E8%83%8C%E6%99%AF%E7%94%BB%E5%83%8F.JPG?alt=media&token=7bfcb4ce-946a-4e06-9b7b-c4cba2d9d49f" />
     <link rel="stylesheet" href="uikit.min.css">
 </head>
@@ -49,10 +49,10 @@
                 <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ただ、旅がしたい。</p>
                 <hr class="uk-divider-small uk-margin-medium-bottom">
                 <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">みなさんは旅をする理由がありますか？</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">社会性のある立派なものを持っていますか？自己中心的なものですか？</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">それは社会性のある立派なものですか？自己中心的なものですか？</p>
                 <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくは、ただひたすらに旅がしたかった、それだけです。</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅ってなんか魅力的じゃないですか。幸か不幸か刺激的な経験ができそうな気がしませんか。なんか、カッコよくないですか。</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅をする理由は常にあいまいです。それを旅と呼ぶのではないでしょうか。</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅って、なんか魅力的じゃないですか。刺激的な経験ができそうな気がしませんか。なんか、カッコよくないですか。</p>
+                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅をする理由は常にあいまいです。それでいいと思います。</p>
             </div>
         </div>
     </div>
@@ -69,7 +69,7 @@
                     <hr class="uk-divider-small uk-margin-medium-bottom">
                     <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">世界を旅すると、見たことのない景色見ることができます。全く異なる文化に触れることができます。最高の笑顔も最低の経験もすることになるでしょう。</p>
                     <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">その中で、何か発見があるはずです。</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">それらひとつひとつの発見を大切にしておくと、どこかで点と点が繋がって線になり、形になっていくのかなと思います。</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">それらひとつひとつの発見を大切にしておくと、どこかで点と点が繋がって線になり、やがて形になっていくのかなと思います。</p>
                 </div>
             </div>
             <div class="uk-width-1-2@m uk-width-1-1" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
@@ -85,9 +85,10 @@
             </div>
             <div class="uk-width-1-2@m uk-width-2-3@s uk-width-1-1 uk-margin-auto uk-flex-first uk-flex-last@s">
                 <div class="uk-margin-medium">
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ふと、ぼくのあいまいな旅にも共通点が見えてきました。ヒッチハイクやボランティアをする中で、ふたつのキーワードが頭に浮かびました。</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ふと、</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくのあいまいな旅にも共通点が見えてきました。ヒッチハイクやボランティアをする中で、ふたつのキーワードが頭に浮かんできました。</p>
                     <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">「人」と「自然」</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくの旅の中心には、常にこのふたつがありました。これがぼくの旅のコンセプトです。</p>
+                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくの旅の中心には、常にこのふたつがありました。これがぼくの旅のコンセプトになりました。</p>
                     <hr class="uk-divider-small uk-margin-medium-top">
                     <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">世界中の人と自然に触れる旅</p>
                 </div>
@@ -102,13 +103,15 @@
         </div>
         <div class="uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@s uk-text-right" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-                <div class="uk-margin-medium-bottom uk-margin-large-right">
+                <div class="uk-margin-medium-bottom uk-margin-medium-top uk-margin-large-right">
                     <div class="uk-text-large">ひろたつ</div>
                 </div>
                 <div class="uk-text-meta uk-margin-large-right">
-                    <div>旅人「世界中の人と自然に触れる旅」</div>
+                    <div>旅人</div>
+                    <div>「世界中の人と自然に触れる旅」</div>
+                    <div>ニュージーランドを放浪中の24歳</div>
                     <div>ヒッチハイクとボランティアでゼロ円ワーホリ中</div>
-                    <div>写真を撮ったりプログラムを書いたりしています</div>
+                    <div>写真を撮ったりプログラムを書いたり</div>
                 </div>
                 <ul class="uk-list uk-margin-large-right">
                     <li><a class="uk-link-reset" href="https://twitter.com/hirotatsuuu" target="_blank">Twitter</a></li>
