--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@hirotatsuuu" />
-    <meta property="og:url" content="https://***" />
+    <meta property="og:url" content="https://hirotatsu.site" />
     <meta property="og:title" content="hirotatsu." />
-    <meta property="og:description" content="koreha hirotatsu no web page desu." />
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/hirotatsu-lp.appspot.com/o/%E8%83%8C%E6%99%AF%E7%94%BB%E5%83%8F.JPG?alt=media&token=7bfcb4ce-946a-4e06-9b7b-c4cba2d9d49f" />
+    <meta property="og:description" content="kotiraha hirotatsu no web page desu." />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/hirotatsu-lp.appspot.com/o/hirotatsu_account.jpg?alt=media&token=f048dff1-ab2d-4a1b-950d-82d2b6da4ecb" />
     <link rel="stylesheet" href="uikit.min.css">
 </head>
 <body>
