--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="uk-text-center uk-container" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-        <img data-src="images/pic1.jpg" uk-img>
+        <img data-src="images/pic1.jpg" decoding="async" uk-img>
     </div>
 
     <div class="uk-section uk-margin-large-right uk-margin-large-left">
@@ -58,7 +58,7 @@
     </div>
 
     <div class="uk-text-center uk-container uk-margin-large-bottom" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-        <img data-src="images/pic5.jpg" uk-img>
+        <img data-src="images/pic5.jpg" decoding="async" uk-img>
     </div>
 
     <div class="uk-section uk-container uk-width-2-3@s uk-margin-auto" id="concept">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="uk-width-1-2@m uk-width-1-1" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-                <img data-src="images/pic7.jpg" uk-img>
+                <img data-src="images/pic7.jpg" decoding="async" uk-img>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
     <div class="uk-section uk-container uk-width-2-3@s uk-margin-auto" id="concept">
         <div class="uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-                <img data-src="images/pic6.jpg" uk-img>
+                <img data-src="images/pic6.jpg" decoding="async" uk-img>
             </div>
             <div class="uk-width-1-2@m uk-width-2-3@s uk-width-1-1 uk-margin-auto uk-flex-first uk-flex-last@s">
                 <div class="uk-margin-medium">
@@ -119,19 +119,19 @@
                 </ul>
             </div>
             <div class="uk-width-1-2@s uk-width-1-1 uk-flex-first uk-flex-last@s" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-                <img data-src="images/account.jpg" uk-img>
+                <img data-src="images/account.jpg" decoding="async" uk-img>
             </div>
         </div>
     </div>
 
     <div class="uk-text-center uk-container uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-        <img data-src="images/pic2.jpg" uk-img>
+        <img data-src="images/pic2.jpg" decoding="async" uk-img>
     </div>
 
     <div class="uk-section uk-margin-large" id="history">
         <div class="uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-                <img data-src="images/pic8.jpg" uk-img>
+                <img data-src="images/pic8.jpg" decoding="async" uk-img>
             </div>
             <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
                 <div class="uk-margin-large-left">
@@ -156,7 +156,7 @@
     </div>
 
     <div class="uk-text-center uk-container uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-        <img data-src="images/pic3.jpg" uk-img>
+        <img data-src="images/pic3.jpg" decoding="async" uk-img>
     </div>
 
     <div uk-slider class="uk-section" id="pictures" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
@@ -167,28 +167,28 @@
         <div class="uk-position-relative uk-visible-toggle uk-light">
             <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m">
                 <li>
-                    <img src="images/picture1.jpg" alt="">
+                    <img src="images/picture1.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture2.jpg" alt="">
+                    <img src="images/picture2.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture3.jpg" alt="">
+                    <img src="images/picture3.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture4.jpg" alt="">
+                    <img src="images/picture4.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture5.jpg" alt="">
+                    <img src="images/picture5.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture6.jpg" alt="">
+                    <img src="images/picture6.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture7.jpg" alt="">
+                    <img src="images/picture7.jpg" decoding="async" alt="">
                 </li>
                 <li>
-                    <img src="images/picture8.jpg" alt="">
+                    <img src="images/picture8.jpg" decoding="async" alt="">
                 </li>
             </ul>
             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
@@ -207,7 +207,7 @@
 
     <div class="uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <div class="uk-text-center">
-            <img data-src="images/pic4.jpg" uk-img>
+            <img data-src="images/pic4.jpg" decoding="async" uk-img>
         </div>
     </div>
 
