再画像圧縮

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="uk-margin-large-left">
                     <ul class="uk-list">
                         <li>1994年12月8日生まれ</li>
-                        <li>2016年7月 初ヒッチハイク(東京-名古屋)</li>
+                        <li>2016年7月 初ヒッチハイク</li>
                         <li>2016年8月 初海外(フィリピン)</li>
                         <li>2017年4月 都内のIT企業に入社</li>
                         <li>2018年8月 ヒッチハイク日本一周</li>
