--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="twitter:site" content="@hirotatsuuu" />
     <meta property="og:url" content="https://hirotatsu.site" />
     <meta property="og:title" content="hirotatsu." />
-    <meta property="og:description" content="kotiraha hirotatsu no web page desu." />
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/hirotatsu-lp.appspot.com/o/hirotatsu_account.jpg?alt=media&token=f048dff1-ab2d-4a1b-950d-82d2b6da4ecb" />
+    <meta property="og:description" content="kokoha hirotatsu no web page desu." />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/hirotatsu-lp.appspot.com/o/mysite_og_image.jpg?alt=media&token=b6c59b85-cda4-4fe4-8e55-246321dd58d8" />
     <link rel="stylesheet" href="uikit.min.css">
 </head>
 <body>
@@ -39,20 +39,20 @@
         </div>
     </div>
 
-    <div class="uk-text-center uk-container" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
-        <img data-src="images/pic1.jpg" decoding="async" uk-img>
+    <div class="uk-text-center uk-container uk-margin-large-bottom" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+        <img data-src="images/pic1.jpg" uk-img>
     </div>
 
     <div class="uk-section uk-margin-large-right uk-margin-large-left">
         <div class="uk-width-1-3@l uk-width-2-3@s uk-width-1-1 uk-margin-auto">
-            <div class="uk-margin-medium">
-                <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ただ、旅がしたい。</p>
+            <div class="uk-margin-medium" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true">
+                <p class="uk-text-large uk-text-muted">ただ、旅がしたい。</p>
                 <hr class="uk-divider-small uk-margin-medium-bottom">
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">みなさんは旅をする理由がありますか？</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">それは社会性のある立派なものですか？自己中心的なものですか？</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくは、ただひたすらに旅がしたかった、それだけです。</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅って、なんか魅力的じゃないですか。刺激的な経験ができそうな気がしませんか。なんか、カッコよくないですか。</p>
-                <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">旅をする理由は常にあいまいです。それでいいと思います。</p>
+                <p class="uk-text-meta">みなさんは旅をする理由がありますか？</p>
+                <p class="uk-text-meta">それは社会性のある立派なものですか？自己中心的なものですか？</p>
+                <p class="uk-text-meta">ぼくは、ただひたすらに旅がしたかった、それだけです。</p>
+                <p class="uk-text-meta">旅って、なんか魅力的じゃないですか。刺激的な経験ができそうな気がしませんか。なんか、カッコよくないですか。</p>
+                <p class="uk-text-meta">旅をする理由は常にあいまいです。それでいいと思います。</p>
             </div>
         </div>
     </div>
@@ -64,12 +64,12 @@
     <div class="uk-section uk-container uk-width-2-3@s uk-margin-auto" id="concept">
         <div class="uk-flex-middle" uk-grid>
             <div class="uk-width-1-2@m uuk-width-2-3@s uk-width-1-1 uk-margin-auto">
-                <div class="uk-margin-medium">
-                    <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">さまよい歩き、その先へ</p>
+                <div class="uk-margin-medium" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true">
+                    <p class="uk-text-large uk-text-muted" >さまよい歩き、その先へ</p>
                     <hr class="uk-divider-small uk-margin-medium-bottom">
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">世界を旅すると、見たことのない景色見ることができます。全く異なる文化に触れることができます。最高の笑顔も最低の経験もすることになるでしょう。</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">その中で、何か発見があるはずです。</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">それらひとつひとつの発見を大切にしておくと、どこかで点と点が繋がって線になり、やがて形になっていくのかなと思います。</p>
+                    <p class="uk-text-meta">世界を旅すると、見たことのない景色見ることができます。全く異なる文化に触れることができます。最高の笑顔も最低の経験もすることになるでしょう。</p>
+                    <p class="uk-text-meta">その中で、何か発見があるはずです。</p>
+                    <p class="uk-text-meta">それらひとつひとつの発見を大切にしておくと、どこかで点と点が繋がって線になり、やがて形になっていくのかなと思います。</p>
                 </div>
             </div>
             <div class="uk-width-1-2@m uk-width-1-1" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
@@ -84,13 +84,13 @@
                 <img data-src="images/pic6.jpg" decoding="async" uk-img>
             </div>
             <div class="uk-width-1-2@m uk-width-2-3@s uk-width-1-1 uk-margin-auto uk-flex-first uk-flex-last@s">
-                <div class="uk-margin-medium">
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ふと、</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくのあいまいな旅にも共通点が見えてきました。ヒッチハイクやボランティアをする中で、ふたつのキーワードが頭に浮かんできました。</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">「人」と「自然」</p>
-                    <p class="uk-text-meta" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">ぼくの旅の中心には、常にこのふたつがありました。これがぼくの旅のコンセプトになりました。</p>
+                <div class="uk-margin-medium" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true">
+                    <p class="uk-text-meta">ふと、</p>
+                    <p class="uk-text-meta">ぼくのあいまいな旅にも共通点が見えてきました。ヒッチハイクやボランティアをする中で、ふたつのキーワードが頭に浮かんできました。</p>
+                    <p class="uk-text-meta">「人」と「自然」</p>
+                    <p class="uk-text-meta">ぼくの旅の中心には、常にこのふたつがありました。これがぼくの旅のコンセプトになりました。</p>
                     <hr class="uk-divider-small uk-margin-medium-top">
-                    <p class="uk-text-large uk-text-muted" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">世界中の人と自然に触れる旅</p>
+                    <p class="uk-text-large uk-text-muted">世界中の人と自然に触れる旅</p>
                 </div>
             </div>
         </div>
@@ -102,14 +102,14 @@
             <hr class="uk-divider-small uk-margin-medium-bottom">
         </div>
         <div class="uk-flex-middle" uk-grid>
-            <div class="uk-width-1-2@s uk-text-right" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+            <div class="uk-width-1-2@s uk-text-right" uk-scrollspy="cls: uk-animation-fade; delay: 400; repeat: true;">
                 <div class="uk-margin-medium-bottom uk-margin-medium-top uk-margin-large-right">
                     <div class="uk-text-large">ひろたつ</div>
                 </div>
                 <div class="uk-text-meta uk-margin-large-right">
                     <div>旅人</div>
-                    <div>「世界中の人と自然に触れる旅」</div>
                     <div>ニュージーランドを放浪中の24歳</div>
+                    <div>「世界中の人と自然に触れる旅」</div>
                     <div>ヒッチハイクとボランティアでゼロ円ワーホリ中</div>
                     <div>写真を撮ったりプログラムを書いたり</div>
                 </div>
@@ -133,7 +133,7 @@
             <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
                 <img data-src="images/pic8.jpg" decoding="async" uk-img>
             </div>
-            <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
+            <div class="uk-width-1-2@m" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true;">
                 <div class="uk-margin-large-left">
                     <div class="uk-text-lead">HISTORY</div>
                     <hr class="uk-divider-small uk-margin-medium-bottom">
@@ -141,12 +141,12 @@
                 <div class="uk-margin-large-left">
                     <ul class="uk-list">
                         <li>1994年12月8日生まれ</li>
-                        <li>2016年7月 初ヒッチハイク</li>
-                        <li>2016年8月 初海外(フィリピン)</li>
+                        <li>2016年8月 初めての海外</li>
+                        <li>2017年3月 旅(10カ国)</li>
                         <li>2017年4月 都内のIT企業に入社</li>
                         <li>2018年8月 ヒッチハイク日本一周</li>
                         <li>2018年9月 ゼロ円ワーホリ(NZ)</li>
-                        <li>2019年9月 ヒッチハイクAUS一周旅</li>
+                        <li>2019年9月 ヒッチハイクAUS一周</li>
                         <li>2019年12月 世界一周</li>
                         <li></li>
                     </ul>
@@ -165,7 +165,7 @@
             <hr class="uk-divider-small uk-margin-medium-bottom">
         </div>
         <div class="uk-position-relative uk-visible-toggle uk-light">
-            <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m">
+            <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-4@m">
                 <li>
                     <img src="images/picture1.jpg" decoding="async" alt="">
                 </li>
@@ -195,7 +195,6 @@
             <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
         </div>
     </div>
-
 
     <div class="uk-section uk-margin-large" id="contact" uk-scrollspy="cls: uk-animation-fade; delay: 300; repeat: true;">
         <div class="uk-text-center uk-container">
