update contact form

--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
             <div class="uk-text-meta uk-margin-medium">or</div>
             <form action="https://docs.google.com/forms/d/e/1FAIpQLSfy89YEQC3hpnd3_TzXnkBvbDmHv5JZ--5YkCeSJEFlh8G0zQ/formResponse">
                 <div class="uk-margin">
-                    <input class="uk-input uk-width-1-2@s" type="text" name="entry.1627277256" placeholder="お名前" required>
+                    <input class="uk-input uk-width-1-2@s" type="text" name="entry.1627277256" placeholder="name" required>
                 </div>
                 <div class="uk-margin">
-                    <input class="uk-input uk-width-1-2@s" type="text" name="entry.1805511184" placeholder="メールアドレス" required>
+                    <input class="uk-input uk-width-1-2@s" type="text" name="entry.1805511184" placeholder="email" required>
                 </div>
                 <div class="uk-margin">
-                    <textarea class="uk-textarea uk-width-1-2@s" rows="10" name="entry.841451467" placeholder="お問い合わせ内容" required></textarea>
+                    <textarea class="uk-textarea uk-width-1-2@s" rows="10" name="entry.841451467" placeholder="message" required></textarea>
                 </div>
                 <div class="uk-margin uk-text-center">
-                    <button class="uk-button uk-button-default uk-width-1-2@s" type="submit">送信</button>
+                    <button class="uk-button uk-button-default uk-width-1-2@s" type="submit">SEND</button>
                 </div>
             </form>
         </div>
