--- a/index.html
+++ b/index.html
@@ -164,42 +164,46 @@
                 <div class="uk-text-lead" >PROJECT</div>
                 <hr class="uk-divider-small uk-margin-medium-bottom">
             </div>
-            <article class="uk-article uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true;">
-                <div class="uk-text-large">ヒッチハイク日本一周</div>
-                <p class="uk-article-meta">2018.08.10 - 2018.08.19</p>
-                <div class="uk-text-center uk-margin-medium">
-                    <div class="uk-flex-middle" uk-grid>
-                        <div class="uk-width-1-3@l uk-width-1-2">
-                            <img data-src="images/pic9.jpg" decoding="async" uk-img>
-                        </div>
-                        <div class="uk-width-1-3@l uk-width-1-2">
-                            <img data-src="images/pic10.jpg" decoding="async" uk-img>
-                        </div>
-                        <div class="uk-width-1-3@l uk-width-1-1 uk-flex-first@l">
-                            <p>ある朝家を出た。徒歩で大通りまで行き、そこからヒッチハイクで最南端の佐多岬へ。そのまま最北端の宗谷岬へ。その後ヒッチハイクで家の近くまで帰ってきて、徒歩で帰宅する。「移動は徒歩かヒッチハイクのみ」「宿は使わない、基本的には野宿をする」がマイルール。結果、41台の車を乗り継いで、達成することができた。さらに今回の活動で使ったお金は「ゼロ円」（フェリー代を除く）。ご飯や飲み物をすべてヒッチハイクでお世話になった方にごちそうして頂いた。また、野宿を基本としていたが、ヒッチハイクでお世話になった方の家に泊めてもらうこともしばしば。最初は自分との戦いという挑戦だったが、最終的には「人の優しさに触れる旅」となった。すべての関わって下さった方々に、心からの感謝を伝えたい。本当にありがとうございました。
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article class="uk-article uk-margin-xlarge" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true;">
-                <div class="uk-text-large">ゼロ円ワーホリ</div>
-                <p class="uk-article-meta">2018.09.12 -</p>
-                <div class="uk-text-center uk-margin-medium">
-                    <div class="uk-flex-middle" uk-grid>
-                        <div class="uk-width-1-3@l uk-width-1-2">
-                            <img data-src="images/pic11.jpg" decoding="async" uk-img>
-                        </div>
-                        <div class="uk-width-1-3@l uk-width-1-2 uk-flex-last@l">
-                            <img data-src="images/pic12.jpg" decoding="async" uk-img>
-                        </div>
-                        <div class="uk-width-1-3@l uk-width-1-1">
-                            <p>「ヒッチハイク」と「ボランディア」でゼロ円ワーホリをしている。生活の基本である衣食住、これをゼロ円に抑えることができれば、ゼロ円ワーホリができるのではと考えた。衣類は日本から持ってくれば良い。代わりにニュージーランドを一周したい。そこで衣類を移動に変更し、僕の生活の基本を「移食住」と定義。これに掛かる費用をゼロ円にしてワーホリをすることに。もちろん最低限必要なお金はある。家からの電車代や飛行機代、島移動等。それらの費用を10万円以内に収めよう。また、活動費用の足しにするため、クラウドファンディング（Polca）で3万円近くのご支援を頂いた。ご支援して下さった方々、本当にありがとうございました。「初期費用100万円」「語学学校からのジャパレス」と言われている「ワーホリのあたりまえ」に対して一石を投じたい。そんな想いで活動している。
-                            </p>
+            <div class="uk-margin-xlarge">
+                <article class="uk-article" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true;">
+                    <div class="uk-text-large">ヒッチハイク日本一周</div>
+                    <p class="uk-article-meta">2018.08.10 - 2018.08.19</p>
+                    <div class="uk-text-center uk-margin-medium">
+                        <div class="uk-flex-middle" uk-grid>
+                            <div class="uk-width-1-3@l uk-width-1-2">
+                                <img data-src="images/pic9.jpg" decoding="async" uk-img>
+                            </div>
+                            <div class="uk-width-1-3@l uk-width-1-2">
+                                <img data-src="images/pic10.jpg" decoding="async" uk-img>
+                            </div>
+                            <div class="uk-width-1-3@l uk-width-1-1 uk-flex-first">
+                                <p>ある朝家を出た。徒歩で大通りまで行き、そこからヒッチハイクで最南端の佐多岬へ。そのまま最北端の宗谷岬へ。その後ヒッチハイクで家の近くまで帰ってきて、徒歩で帰宅する。「移動は徒歩かヒッチハイクのみ」「宿は使わない、基本的には野宿をする」がマイルール。結果、41台の車を乗り継いで、達成することができた。さらに今回の活動で使ったお金は「ゼロ円」（フェリー代を除く）。ご飯や飲み物をすべてヒッチハイクでお世話になった方にごちそうして頂いた。また、野宿を基本としていたが、ヒッチハイクでお世話になった方の家に泊めてもらうこともしばしば。最初は自分との戦いという挑戦だったが、最終的には「人の優しさに触れる旅」となった。すべての関わって下さった方々に、心からの感謝を伝えたい。本当にありがとうございました。
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
+            <div class="uk-margin-xlarge">
+                <article class="uk-article" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: true;">
+                    <div class="uk-text-large">ゼロ円ワーホリ</div>
+                    <p class="uk-article-meta">2018.09.12 -</p>
+                    <div class="uk-text-center uk-margin-medium">
+                        <div class="uk-flex-middle" uk-grid>
+                            <div class="uk-width-1-3@l uk-width-1-2 uk-flex-first@l">
+                                <img data-src="images/pic11.jpg" decoding="async" uk-img>
+                            </div>
+                            <div class="uk-width-1-3@l uk-width-1-2 uk-flex-last@l">
+                                <img data-src="images/pic12.jpg" decoding="async" uk-img>
+                            </div>
+                            <div class="uk-width-1-3@l uk-width-1-1 uk-flex-first">
+                                <p>「ヒッチハイク」と「ボランディア」でゼロ円ワーホリをしている。生活の基本である衣食住、これをゼロ円に抑えることができれば、ゼロ円ワーホリができるのではと考えた。衣類は日本から持ってくれば良い。代わりにニュージーランドを一周したい。そこで衣類を移動に変更し、僕の生活の基本を「移食住」と定義。これに掛かる費用をゼロ円にしてワーホリをすることに。もちろん最低限必要なお金はある。家からの電車代や飛行機代、島移動等。それらの費用を10万円以内に収めよう。また、活動費用の足しにするため、クラウドファンディング（Polca）で3万円近くのご支援を頂いた。ご支援して下さった方々、本当にありがとうございました。「初期費用100万円」「語学学校からのジャパレス」と言われている「ワーホリのあたりまえ」に対して一石を投じたい。そんな想いで活動している。
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
         </div>
     </div>
 
@@ -233,6 +237,7 @@
             </form>
             <div class="uk-text-meta uk-margin-medium">or</div>
             <a class="uk-link-reset" href="https://twitter.com/hirotatsuuu" target="_blank">Twitter</a>
+            <div>↑<br>フォローお待ちしています</div>
         </div>
     </div>
 
